# nprayers

./: .gitignore  CMakeLists.txt  giants_players.cpp  giants_players.hpp  main.cpp  vcpkg-configuration.json  vcpkg.json
examples/drum_machine/: drum_machine.cpp  drum_machine.hpp
examples/drum_machine/api/: audio_file.cpp  audio_file.hpp  pattern.cpp  pattern.hpp  project.cpp  project.hpp  settings.cpp  settings.hpp  util.cpp  util.hpp
examples/drum_machine/model/: file_browser_model.cpp  file_browser_model.hpp  track_list_model.cpp  track_list_model.hpp
examples/drum_machine/render/: track_header_render_delegate.cpp  track_header_render_delegate.hpp  track_item_render_delegate.cpp  track_item_render_delegate.hpp
examples/drum_machine/view/: channel_rack_view.cpp  channel_rack_view.hpp  file_browser_view.cpp  file_browser_view.hpp  sampler_view.cpp  sampler_view.hpp
examples/drum_machine/widget/: track_widget.cpp  track_widget.hpp
examples/file_browser/: file_browser.cpp  file_browser.hpp
examples/simple-text-editor/: player.cpp  player.hpp  player_list_model.cpp  simple_text_editor.cpp  simple_text_editor.hpp
examples/text_editor/: player_list_model.cpp  player_list_model.hpp  simple_text_editor.cpp  simple_text_editor.hpp
trundle/: CMakeLists.txt
trundle/include/trundle/: trundle.hpp
trundle/include/trundle/controller/: controller.hpp  list_controller.hpp  text_editor_controller.hpp  window_controller.hpp
trundle/include/trundle/model/: filter_model.hpp  index.hpp  index_state.hpp  item_model.hpp  list_model.hpp  model.hpp  tree_model.hpp  widget_model.hpp
trundle/include/trundle/renderer/: abstract_header_render_delegate.hpp  header_render_delegate.hpp  item_render_delegate.hpp  list_item_render_delegate.hpp  tree_item_render_delegate.hpp
trundle/include/trundle/util/: action.hpp  color_pair.hpp  enum_math.hpp  key.hpp  keyboard.hpp  layout_attribute.hpp  layout_constraint.hpp  layout_constraint_result.hpp  text.hpp  unicode.hpp
trundle/include/trundle/view/: list_view.hpp  prompt_view.hpp  search_view.hpp  text_view.hpp  tree_view.hpp  view.hpp
trundle/include/trundle/widget/: action_bar_widget.hpp  divider_widget.hpp  frame_widget.hpp  label_widget.hpp  list_widget.hpp  meter_widget.hpp  picker_widget.hpp  scroll_bar_widget.hpp  slider_widget.hpp  text_area_widget.hpp  text_field_widget.hpp  tree_widget.hpp  widget.hpp  window_widget.hpp
trundle/src/: trundle.cpp
trundle/src/controller/: list_controller.cpp  text_editor_controller.cpp  window_controller.cpp
trundle/src/model/: filter_model.cpp  item_model.cpp  list_model.cpp  model.cpp  tree_model.cpp  widget_model.cpp
trundle/src/renderer/: abstract_header_render_delegate.cpp  list_item_render_delegate.cpp  tree_item_render_delegate.cpp
trundle/src/util/: action.cpp  key.cpp  keyboard.cpp  layout_attribute.cpp  layout_constraint.cpp  text.cpp  unicode.cpp
trundle/src/view/: list_view.cpp  prompt_view.cpp  search_view.cpp  text_view.cpp  tree_view.cpp  view.cpp
trundle/src/widget/: action_bar_widget.cpp  divider_widget.cpp  frame_widget.cpp  label_widget.cpp  list_widget.cpp  meter_widget.cpp  picker_widget.cpp  scroll_bar_widget.cpp  slider_widget.cpp  text_area_widget.cpp  text_field_widget.cpp  tree_widget.cpp  widget.cpp  window_widget.cpp
